Minor content tweaks; added docx

--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -119,52 +119,52 @@ div.csl-indent {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-earth" data-pan-to="0%,0%" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-pan-to="0%,0%" data-focus-on="cr-earth">
 <div class="narrative">
 <p>Across the globe, there are definite concrete <em>realities</em> of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-martinbaro" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-martinbaro">
 <div class="narrative">
 <p>We hope that our research will inform efforts to change these <em>realities</em>. Yet, at the same time we must recognize that our understandings are at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of social reality, we can always improve our understandings, and move in the direction of being <em>less wrong</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-silverman" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-silverman">
 <div class="narrative">
 <p>As <span class="citation" data-cites="Silverman1998">Silverman (<a href="#ref-Silverman1998" role="doc-biblioref">1998</a>)</span> wrote:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-box" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box">
 <div class="narrative">
 <p>This recalls the famous saying by the statistician George Box about statistical models, reported in many places, and well captured in the passage by <span class="citation" data-cites="Hand2014">Hand (<a href="#ref-Hand2014" role="doc-biblioref">2014</a>)</span>:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-box2" data-scale-by="1.25">
+<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-box2">
 <div class="narrative">
 <p>A key task then, of using quantitative methods is to use them to try to be progressively <em>less wrong</em> about the answers we are finding to important questions about improving human wellbeing.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-flowchart" data-scale-by="3">
+<div class="trigger new-trigger" data-scale-by="3" data-focus-on="cr-flowchart">
 <div class="narrative">
 <p>Let’s consider a simple visual model based upon some simulated data. Two key variables in this model are <em>intervention</em> (a treatment or program that we hope does some good), and the <em>outcome</em> (an improved or beneficial mental health or psychological outcome).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0">
 <div class="narrative">
 <p>Here is a first model. What do these results say about the relationship of the <em>intervention</em> and the <em>outcome</em>?</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-notrecommended" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-notrecommended">
 <div class="narrative">
 <p>These simple straightforward results suggest that the <em>intervention</em> is associated with a worsening of the <em>outcome</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-flowchart2" data-scale-by="3">
+<div class="trigger new-trigger" data-scale-by="3" data-focus-on="cr-flowchart2">
 <div class="narrative">
 <p>Let’s now consider a slightly more complex model. In addition to examining the <em>intervention</em> and the <em>outcome</em>, we account for the fact that individuals come from different <em>groups</em>. This could be any kind of group, e.g.&nbsp;a racial, ethnic, religious, cultural, or economic group.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0-group" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0-group">
 <div class="narrative">
 <p>Our conclusion seems to have flipped!</p>
 <section id="the-intervention-is-recommended" class="level2 boxgreen">
@@ -173,24 +173,24 @@ div.csl-indent {
 </section>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-Simpson" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-Simpson">
 <div class="narrative">
 <p>The fact that statistical results–and analogously visual results–can flip when more variables are accounted for is known as Simpson’s Paradox <span class="citation" data-cites="Simpson1951">(<a href="#ref-Simpson1951" role="doc-biblioref">Simpson 1951</a>)</span>.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 <p>Adding more variables will not always <em>flip</em> our conclusions. But often, adding additional variables means that an original conclusion that we thought was substantively or statistically significant is no longer significant.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-variables" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-variables">
 <div class="narrative">
 <p>We need to include as many variables as we can in our visual and statistical models.</p>
 <p>Failure to include all of the relevant variables in our model–whether that model is visual or statistical–may lead to very wrong conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-thoughtexperiment" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-thoughtexperiment">
 <div class="narrative">
 <p>At first the scenario I’ve just presented seems almost like a trick, or a puzzle, designed to confound us, or to illustrate a convoluted statistical scenario. Yet, upon reflection, the scenario I’ve just presented is surprisingly plausible.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-belesswrong" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-belesswrong">
 <div class="narrative">
 <p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong.</p>
 <p>What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a <em>little less wrong</em> in thinking about social problems.</p>
