--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2024-12-24">
+<meta name="dcterms.date" content="2024-12-26">
 
 <title>Be Less Wrong</title>
 <style>
@@ -78,9 +78,9 @@ div.csl-indent {
       <style>
         :root {
           --cr-section-background-color: white;
---cr-narrative-text-color-sidebar: black;
---cr-narrative-background-color-sidebar: white;
 --cr-narrative-background-color-overlay: grey;
+--cr-narrative-background-color-sidebar: white;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -105,7 +105,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">December 24, 2024</p>
+      <p class="date">December 26, 2024</p>
     </div>
   </div>
   
@@ -119,52 +119,52 @@ div.csl-indent {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-scale-by="1" data-pan-to="0%,0%" data-focus-on="cr-earth">
+<div class="trigger new-trigger" data-focus-on="cr-earth" data-pan-to="0%,0%" data-scale-by="1">
 <div class="narrative">
 <p>Across the globe, there are definite concrete <em>realities</em> of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-martinbaro">
+<div class="trigger new-trigger" data-focus-on="cr-martinbaro" data-scale-by="1">
 <div class="narrative">
 <p>We hope that our research will inform efforts to change these <em>realities</em>. Yet, at the same time we must recognize that our understandings are at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of social reality, we can always improve our understandings, and move in the direction of being <em>less wrong</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-silverman">
+<div class="trigger new-trigger" data-focus-on="cr-silverman" data-scale-by="1">
 <div class="narrative">
 <p>As <span class="citation" data-cites="Silverman1998">Silverman (<a href="#ref-Silverman1998" role="doc-biblioref">1998</a>)</span> wrote:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box">
+<div class="trigger new-trigger" data-focus-on="cr-box" data-scale-by="1">
 <div class="narrative">
 <p>This recalls the famous saying by the statistician George Box about statistical models, reported in many places, and well captured in the passage by <span class="citation" data-cites="Hand2014">Hand (<a href="#ref-Hand2014" role="doc-biblioref">2014</a>)</span>:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-box2">
+<div class="trigger new-trigger" data-focus-on="cr-box2">
 <div class="narrative">
 <p>A key task then, of using quantitative methods is to use them to try to be progressively <em>less wrong</em> about the answers we are finding to important questions about improving human wellbeing.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="3" data-focus-on="cr-flowchart">
+<div class="trigger new-trigger" data-focus-on="cr-flowchart">
 <div class="narrative">
 <p>Let’s consider a simple visual model based upon some simulated data. Two key variables in this model are <em>intervention</em> (a treatment or program that we hope does some good), and the <em>outcome</em> (an improved or beneficial mental health or psychological outcome).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0">
+<div class="trigger new-trigger" data-focus-on="cr-p0" data-scale-by="1">
 <div class="narrative">
 <p>Here is a first model. What do these results say about the relationship of the <em>intervention</em> and the <em>outcome</em>?</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-notrecommended">
+<div class="trigger new-trigger" data-focus-on="cr-notrecommended" data-scale-by="1">
 <div class="narrative">
 <p>These simple straightforward results suggest that the <em>intervention</em> is associated with a worsening of the <em>outcome</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="3" data-focus-on="cr-flowchart2">
+<div class="trigger new-trigger" data-focus-on="cr-flowchart2">
 <div class="narrative">
 <p>Let’s now consider a slightly more complex model. In addition to examining the <em>intervention</em> and the <em>outcome</em>, we account for the fact that individuals come from different <em>groups</em>. This could be any kind of group, e.g.&nbsp;a racial, ethnic, religious, cultural, or economic group.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0-group">
+<div class="trigger new-trigger" data-focus-on="cr-p0-group" data-scale-by="1">
 <div class="narrative">
 <p>Our conclusion seems to have flipped!</p>
 <section id="the-intervention-is-recommended" class="level2 boxgreen">
@@ -173,24 +173,24 @@ div.csl-indent {
 </section>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-Simpson">
+<div class="trigger new-trigger" data-focus-on="cr-Simpson" data-scale-by="1">
 <div class="narrative">
 <p>The fact that statistical results–and analogously visual results–can flip when more variables are accounted for is known as Simpson’s Paradox <span class="citation" data-cites="Simpson1951">(<a href="#ref-Simpson1951" role="doc-biblioref">Simpson 1951</a>)</span>.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 <p>Adding more variables will not always <em>flip</em> our conclusions. But often, adding additional variables means that an original conclusion that we thought was substantively or statistically significant is no longer significant.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-variables">
+<div class="trigger new-trigger" data-focus-on="cr-variables" data-scale-by="1">
 <div class="narrative">
 <p>We need to include as many variables as we can in our visual and statistical models.</p>
 <p>Failure to include all of the relevant variables in our model–whether that model is visual or statistical–may lead to very wrong conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-thoughtexperiment">
+<div class="trigger new-trigger" data-focus-on="cr-thoughtexperiment" data-scale-by="1">
 <div class="narrative">
 <p>At first the scenario I’ve just presented seems almost like a trick, or a puzzle, designed to confound us, or to illustrate a convoluted statistical scenario. Yet, upon reflection, the scenario I’ve just presented is surprisingly plausible.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-belesswrong">
+<div class="trigger new-trigger" data-focus-on="cr-belesswrong" data-scale-by="1">
 <div class="narrative">
 <p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong.</p>
 <p>What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a <em>little less wrong</em> in thinking about social problems.</p>
@@ -223,12 +223,12 @@ div.csl-indent {
 <p>“In general, when building statistical models, we must not forget that the aim is to understand something about the real world. Or predict, choose an action, make a decision, summarize evidence, and so on, but always about the real world, not an abstract mathematical world: our models are not the reality—a point well made by George Box in his oft-cited remark that ‘all models are wrong, but some are useful’ (Box, 1979 in <span class="citation" data-cites="MR0554183">Launer and Wilkinson (<a href="#ref-MR0554183" role="doc-biblioref">1979</a>)</span>).” <span class="citation" data-cites="Hand2014">(<a href="#ref-Hand2014" role="doc-biblioref">Hand 2014</a>)</span></p>
 </blockquote>
 </div>
-<div id="cr-box2" class="sticky">
+<div id="cr-box2" class="scale-to-fill sticky">
 <blockquote class="blockquote">
 <p>“All models are wrong, but some are useful.” <span class="citation" data-cites="Box1979">(<a href="#ref-Box1979" role="doc-biblioref">Box 1979</a>)</span></p>
 </blockquote>
 </div>
-<div id="cr-flowchart" class="sticky">
+<div id="cr-flowchart" class="scale-to-fill sticky">
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
@@ -265,7 +265,7 @@ Figure&nbsp;1
 <p>Based upon these results we would <em>not</em> recommend using this intervention.</p>
 </section>
 </div>
-<div id="cr-flowchart2" class="sticky">
+<div id="cr-flowchart2" class="scale-to-fill sticky">
 <div class="cell" data-layout-align="default">
 <div class="cell-output-display">
 <div>
@@ -312,7 +312,7 @@ Figure&nbsp;2
 <div id="cr-thoughtexperiment" class="sticky">
 <section id="a-thought-experiment" class="level2">
 <h2 class="anchored" data-anchor-id="a-thought-experiment">A Thought Experiment</h2>
-<p>Imagine a situation in which an intervention is administered based upon the situation in a local community. Quite possibly, the intervention might be given in communities where outcomes are less good. At the same time the intervention might be beneficial to individuals. Such a scenario would present us with exactly the data that we see reflected in <a href="#fig-p0" class="quarto-xref">Figure&nbsp;1</a> and <a href="#fig-p0-group" class="quarto-xref">Figure&nbsp;2</a>.</p>
+<p>Imagine a situation in which an intervention is administered based upon the situation in a local community. Quite possibly, the intervention might be provided at higher levels in communities where outcomes are less good. At the same time the intervention might be beneficial to individuals. Such a scenario would present us with exactly the data that we see reflected in <a href="#fig-p0" class="quarto-xref">Figure&nbsp;1</a> and <a href="#fig-p0-group" class="quarto-xref">Figure&nbsp;2</a>.</p>
 <div class="cell">
 <div class="cell-output-display">
 <div id="fig-combined" class="quarto-float quarto-figure quarto-figure-center anchored" width="672">
