--- a/parenting.html
+++ b/parenting.html
@@ -56,8 +56,8 @@ ul.task-list li input[type="checkbox"] {
         :root {
           --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
---cr-narrative-text-color-sidebar: black;
 --cr-narrative-background-color-overlay: grey;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -84,57 +84,57 @@ ul.task-list li input[type="checkbox"] {
 
 <div class="cr-section cr-column-screen sidebar-left">
 <div class="narrative-col">
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".75" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by=".75" data-focus-on="cr-positiveparenting" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Parents raise their children in a variety of ways.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by="1.1" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.1" data-focus-on="cr-positiveparenting" data-pan-to="0%,0%">
 <div class="narrative">
 <p>The objective of this study was to test the associations between 11 caregiver aggressive and nonaggressive discipline behaviors and outcomes (aggression and prosocial peer relations) of children under 5 in low- and middle-income countries (LMICs).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.0">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-mymap">
 <div class="narrative">
 <p>Data came from the fourth (2009-2013) and fifth (2012-2017) rounds of the UNICEF Multiple Indicator Cluster Surveys (MICS).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-mymap" data-scale-by="1.25">
+<div class="trigger new-trigger" data-scale-by="1.25" data-focus-on="cr-mymap">
 <div class="narrative">
 <p>Analyses were restricted to households with children under 5 years, leaving a sample of 229,465 respondents across 60 LMICs.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-equation" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-equation">
 <div class="narrative">
 <p>Data were analyzed using a statistical method known as Bayesian multilevel logistic regression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Different forms of discipline had different effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.5" data-pan-to="50%,30%">
+<div class="trigger new-trigger" data-scale-by="1.5" data-focus-on="cr-discipline" data-pan-to="50%,30%">
 <div class="narrative">
 <p>Verbal reasoning (80%) and shouting (66%) were the most common parental discipline behaviors toward young children.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Psychological and physical aggression had similar effects.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline2" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline2" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Psychological and physical aggression were associated with higher child aggression.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline3" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline3" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Verbal reasoning was associated with lower aggression and higher prosocial peer relations.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-discipline4" data-scale-by="1.0" data-pan-to="0%,0%">
+<div class="trigger new-trigger" data-scale-by="1.0" data-focus-on="cr-discipline4" data-pan-to="0%,0%">
 <div class="narrative">
 <p>Taking away privileges was associated with lower prosocial peer relations.</p>
 </div>
@@ -149,22 +149,22 @@ ul.task-list li input[type="checkbox"] {
 <p>However, the associations of discipline with child outcomes were still largely consistent across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".6">
+<div class="trigger new-trigger" data-scale-by=".6" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Psychological and physical aggression were disadvantageous for children’s socio-emotional development across countries.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".7">
+<div class="trigger new-trigger" data-scale-by=".7" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Only verbal reasoning was associated with positive child socio-emotional development.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".8">
+<div class="trigger new-trigger" data-scale-by=".8" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>No form of psychological aggression or physical aggression benefited child socio-emotional development in any country.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-positiveparenting" data-scale-by=".9">
+<div class="trigger new-trigger" data-scale-by=".9" data-focus-on="cr-positiveparenting">
 <div class="narrative">
 <p>Greater emphasis should be dedicated to reducing parental use of psychological and physical aggression across cultural contexts.</p>
 </div>
@@ -692,7 +692,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 });
 </script>
 </div> <!-- /content -->
-<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://globalfamilies.quarto.pub/parenting/&amp;title=awesome page" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=awesome page&amp;body=Check out this link:https://globalfamilies.quarto.pub/parenting/" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://globalfamilies.quarto.pub/parenting/" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://globalfamilies.quarto.pub/parenting/&amp;title=awesome page" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=awesome page https://globalfamilies.quarto.pub/parenting/'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://globalfamilies.quarto.pub/parenting/ awesome page" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
+<div class="page-columns page-rows-contents page-layout-article"><div class="social-share"><a href="https://www.linkedin.com/shareArticle?url=https://globalfamilies.quarto.pub/parenting/&amp;title=What Should Parents Do?" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin-in fa-fw fa-lg"></i></a>  <a href="mailto:?subject=What Should Parents Do?&amp;body=Check out this link:https://globalfamilies.quarto.pub/parenting/" target="_blank" class="email"><i class="fa-solid fa-envelope fa-fw fa-lg"></i></a><a href="https://www.facebook.com/sharer.php?u=https://globalfamilies.quarto.pub/parenting/" target="_blank" class="facebook"><i class="fab fa-facebook-f fa-fw fa-lg"></i></a><a href="https://reddit.com/submit?url=https://globalfamilies.quarto.pub/parenting/&amp;title=What Should Parents Do?" target="_blank" class="reddit">   <i class="fa-brands fa-reddit-alien fa-fw fa-lg"></i></a><a href="javascript:void(0);" onclick="var mastodon_instance=prompt('Mastodon Instance / Server Name?'); if(typeof mastodon_instance==='string' &amp;&amp; mastodon_instance.length){this.href='https://'+mastodon_instance+'/share?text=What Should Parents Do? https://globalfamilies.quarto.pub/parenting/'}else{return false;}" target="_blank" class="mastodon"><i class="fa-brands fa-mastodon fa-fw fa-lg"></i></a><a href="https://bsky.app/intent/compose?text=https://globalfamilies.quarto.pub/parenting/ What Should Parents Do?" target="_blank" class="bsky"><i class="fa-brands fa-bluesky"></i></a></div></div>
 
 
 
