--- a/be-less-wrong/be-less-wrong.html
+++ b/be-less-wrong/be-less-wrong.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 <meta name="author" content="Andy Grogan-Kaylor">
-<meta name="dcterms.date" content="2025-01-03">
+<meta name="dcterms.date" content="2025-01-05">
 
 <title>Be Less Wrong</title>
 <style>
@@ -87,10 +87,10 @@ div.csl-indent {
       <!-- user-provided yaml closeread style options -->
       <style>
         :root {
-          --cr-narrative-background-color-overlay: grey;
---cr-section-background-color: white;
---cr-narrative-text-color-sidebar: black;
+          --cr-section-background-color: white;
 --cr-narrative-background-color-sidebar: white;
+--cr-narrative-background-color-overlay: grey;
+--cr-narrative-text-color-sidebar: black;
         }
       </style>
     
@@ -115,7 +115,7 @@ div.csl-indent {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">January 3, 2025</p>
+      <p class="date">January 5, 2025</p>
     </div>
   </div>
   
@@ -134,24 +134,24 @@ div.csl-indent {
 <p>Across the globe, there are definite concrete <em>realities</em> of abuse, neglect, suffering, exploitation, violence, discrimination, and other associated problems that we are trying to understand, and to reduce.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-martinbaro" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-martinbaro">
 <div class="narrative">
-<p>We hope that our research will inform efforts to change these <em>realities</em>. Yet, at the same time we must recognize that our understandings are at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of social reality, we can always improve our understandings, and move in the direction of being <em>less wrong</em>.</p>
+<p>We hope that our research will inform efforts to change these <em>realities</em>. However, we must be aware that our understanding of the world is at best <em>iterative</em> and <em>contingent.</em> While we will never have a perfect understanding of the social world, we can always better our understanding, and move toward being <em>less wrong</em>.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-silverman" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-silverman">
 <div class="narrative">
 <p>As <span class="citation" data-cites="Silverman1998">Silverman (<a href="#ref-Silverman1998" role="doc-biblioref">1998</a>)</span> wrote:</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-box" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-box">
 <div class="narrative">
-<p>This recalls the famous saying by the statistician George Box about statistical models, reported in many places, and well captured in the passage by <span class="citation" data-cites="Hand2014">Hand (<a href="#ref-Hand2014" role="doc-biblioref">2014</a>)</span>:</p>
+<p>This reminds us of the famous saying by the statistician George Box about statistical models <span class="citation" data-cites="Hand2014">(<a href="#ref-Hand2014" role="doc-biblioref">Hand 2014</a>)</span>:</p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-box2">
 <div class="narrative">
-<p>A key task then, of using quantitative methods is to use them to try to be progressively <em>less wrong</em> about the answers we are finding to important questions about improving human wellbeing.</p>
+<p>Thus, an important reason for using quantitative methods is to use them to try to be iteratively <em>less wrong</em> about the answers we are finding to important questions about addressing social issues.</p>
 </div>
 </div>
 <div class="trigger new-trigger" data-focus-on="cr-flowchart">
@@ -159,12 +159,12 @@ div.csl-indent {
 <p>Let’s consider a simple visual model based upon some simulated data. Two key variables in this model are the <em>intervention</em> (a treatment or program that we hope does some good), and the <em>outcome</em> (an improved or beneficial mental health or psychological outcome).</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0">
 <div class="narrative">
 <p>Here is a first model. What do these results say about the relationship of the <em>intervention</em> and the <em>outcome</em>?</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-notrecommended" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-notrecommended">
 <div class="narrative">
 <p>These simple straightforward results suggest that the <em>intervention</em> is associated with a worsening of the <em>outcome</em>.</p>
 </div>
@@ -174,7 +174,7 @@ div.csl-indent {
 <p>Let’s now consider a slightly more complex model. In addition to examining the <em>intervention</em> and the <em>outcome</em>, we account for the fact that individuals come from different <em>groups</em>. This could be any kind of group, e.g.&nbsp;a racial, ethnic, religious, cultural, or economic group.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-p0-group" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-p0-group">
 <div class="narrative">
 <p>Our conclusion seems to have flipped!</p>
 <section id="the-intervention-is-recommended" class="level2 boxgreen">
@@ -183,28 +183,28 @@ div.csl-indent {
 </section>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-Simpson" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-Simpson">
 <div class="narrative">
 <p>The fact that statistical results–and analogously visual results–can flip when more variables are accounted for is known as Simpson’s Paradox <span class="citation" data-cites="Simpson1951">(<a href="#ref-Simpson1951" role="doc-biblioref">Simpson 1951</a>)</span>.<a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-multivariate" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-multivariate">
 <div class="narrative">
 <p>Adding more variables will not always <em>flip</em> our conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-variables" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-variables">
 <div class="narrative">
 <p>We need to include as many variables as we can in our visual and statistical models.</p>
 <p>Failure to include all of the relevant variables in our model–whether that model is visual or statistical–may lead to very wrong conclusions.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-thoughtexperiment" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-thoughtexperiment">
 <div class="narrative">
 <p>At first the scenario I’ve just presented seems almost like a trick, or a puzzle, designed to confound us, or to illustrate a convoluted statistical scenario. Yet, upon reflection, the scenario I’ve just presented is surprisingly plausible.</p>
 </div>
 </div>
-<div class="trigger new-trigger" data-focus-on="cr-belesswrong" data-scale-by="1">
+<div class="trigger new-trigger" data-scale-by="1" data-focus-on="cr-belesswrong">
 <div class="narrative">
 <p>My point? Simple models feel intuitive and have a commonsense appeal. Yet, with even slightly complicated social issues, simple models may be wrong.</p>
 <p>What I have illustrated here is only one set of ideas about how we need to complicate our quantitative thinking to try to be a <em>little less wrong</em> in thinking about social problems.</p>
@@ -225,7 +225,7 @@ div.csl-indent {
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 <div class="plotly html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-70a688681697cdb7b619" style="width:100%;height:288px;"></div>
-<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"ec451022077":["function () ","plotlyVisDat"]},"cur_data":"ec451022077","attrs":{"ec451022077":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(169,169,169,1)","showcountries":true,"showocean":false,"oceancolor":"lightblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
+<script type="application/json" data-for="htmlwidget-70a688681697cdb7b619">{"x":{"visdat":{"1e8e7ae05dd3":["function () ","plotlyVisDat"]},"cur_data":"1e8e7ae05dd3","attrs":{"1e8e7ae05dd3":{"alpha_stroke":1,"sizes":[10,100],"spans":[1,20]}},"layout":{"margin":{"b":0,"l":0,"t":0,"r":0,"pad":3},"mapType":"geo","geo":{"domain":{"x":[0,1],"y":[0,1]},"showland":true,"landcolor":"rgba(169,169,169,1)","showcountries":true,"showocean":false,"oceancolor":"lightblue","lataxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"lonaxis":{"showgrid":true,"gridcolor":"rgba(190,190,190,1)"},"projection":{"type":"orthographic","rotation":{"lon":-45,"lat":10,"roll":0}}},"hovermode":"closest","showlegend":false},"source":"A","config":{"modeBarButtonsToAdd":["hoverclosest","hovercompare"],"showSendToCloud":false,"displayModeBar":false},"data":[{"type":"scattergeo","mode":"markers","marker":{"color":"rgba(31,119,180,1)","line":{"color":"rgba(31,119,180,1)"}},"line":{"color":"rgba(31,119,180,1)"},"geo":"geo","frame":null}],"highlight":{"on":"plotly_click","persistent":false,"dynamic":false,"selectize":false,"opacityDim":0.20000000000000001,"selected":{"opacity":1},"debounce":0},"shinyEvents":["plotly_hover","plotly_click","plotly_selected","plotly_relayout","plotly_brushed","plotly_brushing","plotly_clickannotation","plotly_doubleclick","plotly_deselect","plotly_afterplot","plotly_sunburstclick"],"base_url":"https://plot.ly"},"evals":[],"jsHooks":[]}</script>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-globe-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Countries of the World
